--- a/LearnOnTheGo.WP8/SettingsPage.xaml
+++ b/LearnOnTheGo.WP8/SettingsPage.xaml
@@ -42,12 +42,14 @@
         <phone:Pivot Title="Learn On The Go">
             <phone:PivotItem Header="Settings">
                 <StackPanel>
-                    <TextBlock Margin="12,12,12,0" Text="Please enter your Coursera login information" />
+                    <TextBlock Margin="12,0" Text="Please enter your Coursera login information" />
                     <watermark:WatermarkTextBox x:Name="email" InputScope="EmailUserName" WatermarkText="Email Address" />
                     <watermark:WatermarkPasswordBox x:Name="password" WatermarkText="Password" />
+                    <TextBlock Margin="12,24,12,0" Text="Not signed up yet?" />
+                    <Button Content="Create Account" Click="OnCreateAccountClick" />
                 </StackPanel>
             </phone:PivotItem>
-        </phone:Pivot>       
+        </phone:Pivot>
     </Grid>
  
     <phone:PhoneApplicationPage.ApplicationBar>
