[LOTG] Add stream button (menu wasn't very findable)

--- a/LearnOnTheGo.WP8/CoursePage.xaml
+++ b/LearnOnTheGo.WP8/CoursePage.xaml
@@ -74,6 +74,10 @@
                                                 Margin="-4,4,-4,-4"
                                                 ImageSource="/Assets/Icons/dark/appbar.page.png" 
                                                 Visibility="{Binding HasLectureNotes, Converter={StaticResource booleanToVisibilityConverter}}"/>
+                        <coding4fun:RoundButton Tap="OnStreamClick"
+                                                Visibility="{Binding DownloadInfo.NotDownloaded, Converter={StaticResource booleanToVisibilityConverter}}"
+                                                Margin="-4,4,-4,-4"
+                                                ImageSource="/Assets/Icons/dark/appbar.control.play.streaming.png" />
                         <coding4fun:RoundButton Tap="OnPlayOrDownloadOrCancelClick"
                                                 Margin="-4,4,-4,-4"
                                                 ImageSource="{Binding DownloadInfo.Self, Converter={StaticResource downloadInfoToImageSourceConverter}}" />
@@ -91,10 +95,7 @@
                             <toolkit:ContextMenu>
                                 <toolkit:MenuItem Header="Delete downloaded video"
                                                   Click="OnDeleteClick"
-                                                  Visibility="{Binding DownloadInfo.Downloaded, Converter={StaticResource booleanToVisibilityConverter}}" />
-                                <toolkit:MenuItem Header="Stream video from web"
-                                                  Click="OnStreamClick"
-                                                  Visibility="{Binding DownloadInfo.NotDownloaded, Converter={StaticResource booleanToVisibilityConverter}}" />
+                                                  IsEnabled="{Binding DownloadInfo.Downloaded}" />
                             </toolkit:ContextMenu>
                         </toolkit:ContextMenuService.ContextMenu>
                     </toolkit:TransferControl>
@@ -102,10 +103,7 @@
                         <toolkit:ContextMenu>
                             <toolkit:MenuItem Header="Delete downloaded video"
                                               Click="OnDeleteClick"
-                                              Visibility="{Binding DownloadInfo.Downloaded, Converter={StaticResource booleanToVisibilityConverter}}" />
-                            <toolkit:MenuItem Header="Stream video from web"
-                                              Click="OnStreamClick"
-                                              Visibility="{Binding DownloadInfo.NotDownloaded, Converter={StaticResource booleanToVisibilityConverter}}" />
+                                              IsEnabled="{Binding DownloadInfo.Downloaded}" />
                         </toolkit:ContextMenu>
                     </toolkit:ContextMenuService.ContextMenu>
                 </Grid>
