--- a/LearnOnTheGo.WP8/DownloadsPage.xaml
+++ b/LearnOnTheGo.WP8/DownloadsPage.xaml
@@ -105,16 +105,22 @@
             <phone:PivotItem Header="In Progress">
                 <ScrollViewer>
                     <Grid>
-                        <ItemsControl x:Name="inProgressDownloads"
-                                      Margin="0,0,0,95"
-                                      ItemsSource="{Binding DownloadsInProgress}"
-                                      ItemTemplate="{StaticResource videoTemplate}">
-                            <ItemsControl.ItemsPanel>
-                                <ItemsPanelTemplate>
-                                    <VirtualizingStackPanel />
-                                </ItemsPanelTemplate>
-                            </ItemsControl.ItemsPanel>
-                        </ItemsControl>
+                        <StackPanel>
+                            <TextBlock Text="Please note that files over 20MB can not be downloaded over cellular connection, and files over 100MB can not be downloaded unless connected to external power. This is a Windows Phone limitation."
+                                       Margin="12,0,0,0" 
+                                       Style="{StaticResource PhoneTextSmallStyle}"
+                                       TextWrapping="Wrap" />
+                            <ItemsControl x:Name="inProgressDownloads"
+                                          Margin="0,0,0,95"
+                                          ItemsSource="{Binding DownloadsInProgress}"
+                                          ItemTemplate="{StaticResource videoTemplate}">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <VirtualizingStackPanel />
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                            </ItemsControl>
+                        </StackPanel>
                         <TextBlock x:Name="inProgressDownloadsEmptyMessage" 
                                    Visibility="Collapsed"
                                    Text="No downloads"
