Added send text message option on context menu to let someone know about a departure

--- a/Trains.WP8/StationPage.xaml
+++ b/Trains.WP8/StationPage.xaml
@@ -138,6 +138,11 @@
                             </Grid>
                         </ControlTemplate>
                     </Button.Template>
+                    <toolkit:ContextMenuService.ContextMenu>
+                        <toolkit:ContextMenu>
+                            <toolkit:MenuItem Header="Send Text Message" Click="OnSendTextMessage" />
+                        </toolkit:ContextMenu>
+                    </toolkit:ContextMenuService.ContextMenu>
                 </Button>
             </DataTemplate>
 
