--- a/Trains.WP8/StationPage.xaml
+++ b/Trains.WP8/StationPage.xaml
@@ -11,6 +11,7 @@
     xmlns:src="clr-namespace:Trains.WP8"
     xmlns:trains="clr-namespace:Trains;assembly=Trains"
     xmlns:commonWP8="clr-namespace:Common.WP8;assembly=Common.WP8"
+    xmlns:telerikPrimitives="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Primitives"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="696"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -138,11 +139,11 @@
                             </Grid>
                         </ControlTemplate>
                     </Button.Template>
-                    <toolkit:ContextMenuService.ContextMenu>
-                        <toolkit:ContextMenu>
-                            <toolkit:MenuItem Header="Send Text Message" Click="OnSendTextMessage" />
-                        </toolkit:ContextMenu>
-                    </toolkit:ContextMenuService.ContextMenu>
+                    <telerikPrimitives:RadContextMenu.ContextMenu>
+                        <telerikPrimitives:RadContextMenu>
+                            <telerikPrimitives:RadContextMenuItem Content="Send Text Message" Tapped="OnSendTextMessage" />
+                        </telerikPrimitives:RadContextMenu>
+                    </telerikPrimitives:RadContextMenu.ContextMenu>
                 </Button>
             </DataTemplate>
 
