--- a/Trains.WP8/SettingsPage.xaml
+++ b/Trains.WP8/SettingsPage.xaml
@@ -53,17 +53,13 @@
                                           x:Name="enableLocationServices" />
                     <TextBlock TextWrapping="Wrap" Margin="12,-12,0,0">
                         Your privacy is important to us. This application uses 
-                        your current location to show you the nearest stations. No 
+                        your current location only to show you the nearest stations. No 
                         information is stored or shared.
                     </TextBlock>
-                    <Button Content="Show departures on lock screen" 
-                            Margin="0,24,0,0"
-                            Tap="OnShowDeparturesOnLockScreenClick" />
                     <toolkit:ToggleSwitch Content="Auto Refresh"
                                           x:Name="autoRefresh" />
                     <TextBlock TextWrapping="Wrap" Margin="12,-12,0,0">
                         When auto refresh is enabled, the departures, arrivals and live progress pages will be refreshed automatically every 60 seconds.
-                        If location services are also enabled, this will happen even when the app is in the background.
                         Please note that this may increase the data usage.
                     </TextBlock>
                 </StackPanel>
