Small UI tweaks

--- a/Trains.WP8/MainAndFilterPage.xaml
+++ b/Trains.WP8/MainAndFilterPage.xaml
@@ -215,9 +215,7 @@
 
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar Opacity="0.9">
-            <shell:ApplicationBar.MenuItems>
-                <shell:ApplicationBarMenuItem Text="Clear recent items" Click="OnClearRecentItemsClick"/>
-            </shell:ApplicationBar.MenuItems>
+            <shell:ApplicationBarIconButton IconUri="/Assets/Icons/dark/appbar.delete.png" Text="Clear recent" Click="OnClearRecentItemsClick" />
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
 
