Remove usage of Telerik controls

--- a/LearnOnTheGo.WP8/CoursePage.xaml
+++ b/LearnOnTheGo.WP8/CoursePage.xaml
@@ -12,7 +12,6 @@
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     xmlns:lotg="clr-namespace:LearnOnTheGo;assembly=LearnOnTheGo"
     xmlns:commonWP8="clr-namespace:Common.WP8;assembly=Common.WP8"
-    xmlns:telerikPrimitives="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Primitives"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -92,21 +91,21 @@
                         <toolkit:TransferControl.HeaderTemplate>
                             <DataTemplate />
                         </toolkit:TransferControl.HeaderTemplate>
-                        <telerikPrimitives:RadContextMenu.ContextMenu>
-                            <telerikPrimitives:RadContextMenu>
-                                <telerikPrimitives:RadContextMenuItem Content="Delete downloaded video"
-                                                                      Tapped="OnDeleteClick"
-                                                                      IsEnabled="{Binding DownloadInfo.Downloaded}" />
-                            </telerikPrimitives:RadContextMenu>
-                        </telerikPrimitives:RadContextMenu.ContextMenu>
+                        <toolkit:ContextMenuService.ContextMenu>
+                            <toolkit:ContextMenu>
+                                <toolkit:MenuItem Header="Delete downloaded video"
+                                                  Click="OnDeleteClick"
+                                                  IsEnabled="{Binding DownloadInfo.Downloaded}" />
+                            </toolkit:ContextMenu>
+                        </toolkit:ContextMenuService.ContextMenu>
                     </toolkit:TransferControl>
-                    <telerikPrimitives:RadContextMenu.ContextMenu>
-                        <telerikPrimitives:RadContextMenu>
-                            <telerikPrimitives:RadContextMenuItem Content="Delete downloaded video"
-                                                                  Tapped="OnDeleteClick"
-                                                                  IsEnabled="{Binding DownloadInfo.Downloaded}" />
-                        </telerikPrimitives:RadContextMenu>
-                    </telerikPrimitives:RadContextMenu.ContextMenu>
+                    <toolkit:ContextMenuService.ContextMenu>
+                        <toolkit:ContextMenu>
+                            <toolkit:MenuItem Header="Delete downloaded video"
+                                              Click="OnDeleteClick"
+                                              IsEnabled="{Binding DownloadInfo.Downloaded}" />
+                        </toolkit:ContextMenu>
+                    </toolkit:ContextMenuService.ContextMenu>
                 </Grid>
             </DataTemplate>
             <DataTemplate x:Key="sectionTemplate">
