--- a/Trains.WP8/MainAndFilterPage.xaml
+++ b/Trains.WP8/MainAndFilterPage.xaml
@@ -11,7 +11,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:trains="clr-namespace:Trains;assembly=Trains"
-    xmlns:telerikPrimitives="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Primitives"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="696"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -78,11 +77,11 @@
             </DataTemplate>
             <DataTemplate x:Key="recentItemTemplate">
                 <Button Tap="OnStationClick">
-                    <telerikPrimitives:RadContextMenu.ContextMenu>
-                        <telerikPrimitives:RadContextMenu>
-                            <telerikPrimitives:RadContextMenuItem Content="Remove" Tapped="OnRecentItemRemoveClick" />
-                        </telerikPrimitives:RadContextMenu>
-                    </telerikPrimitives:RadContextMenu.ContextMenu>
+                    <toolkit:ContextMenuService.ContextMenu>
+                        <toolkit:ContextMenu>
+                            <toolkit:MenuItem Header="Remove" Click="OnRecentItemRemoveClick" />
+                        </toolkit:ContextMenu>
+                    </toolkit:ContextMenuService.ContextMenu>
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <Grid Margin="12,0,0,24">
